# Trade_bot_public

./: .gitignore  CLAUDE.md  README.md  goal.md  main.py  param_sweep.py  pyproject.toml  visualize_raw.py  visualize_targets.py  xgboost_chronos_experiment.ipynb  xgboost_experimen_bin.ipynb  xgboost_experiment.ipynb  xgboost_experiment_bin_conf.ipynb  xgboost_experiment_weighted.ipynb  xgboost_nns_experiment.ipynb  xgboost_nns_experiment_bin_conf.ipynb
.claude/: settings.json
Chronos/: chronos_experiment.ipynb  chronos_experiment.md  chronos_feature_plot.py  chronos_features.py  chronos_inference.py  chronos_plots.py
Kronos/: kronos_feature_plot.py  kronos_features.py  kronos_inference.py  kronos_plots.py
MD/: mlflow_server.md  pipeline.md  targets.md  visualize_raw.md  xgboost_experiment.md  xgboost_params.md
Pipeline/: pipeline.py
Supplementary/: feature_correlation.ipynb  feature_correlation.py  fracdiff_adf.py
Timeseriesfm/: README.md  timesfm_feature_plot.py  timesfm_features.py  timesfm_inference.py  timesfm_plots.py
bot/: README.md  __init__.py  baseline_strategies.py  config.py  ensemble_stability.py  fast_annual_scan.py  fvg_utils.py  market_regime.py  meta_filter.py  model_adapters.py  optimize.py  pnl_meta_filter.py  regime_diagnostics.py  reports.py  simulator.py  stability_signal_scan.py  train_xgboost.py  walkforward.py
strategy_fvg_fractals/: __init__.py  pipeline.py  xgboost_fvg_fractals.ipynb
